--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -1,8 +1,9 @@
 = form_for @category, :html => { :class => 'form-horizontal' } do |f|
+  = render 'shared/error_messages', :object => @category
   .control-group
     = f.label :name, :class => 'control-label'
     .controls
       = f.text_field :name, :class => 'text_field'
   .form-actions
     = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), categories, :class => 'btn'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), new_category_url, :class => 'btn'
