--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -8,15 +8,25 @@
       %th= model_class.human_attribute_name(:title)
       %th= model_class.human_attribute_name(:description)
       %th= model_class.human_attribute_name(:price)
+      %th Category
       %th=t '.actions', :default => t("helpers.actions")
   %tbody
-    - @products.each do |product|
+    - Array(@products).each_with_index do |product|
       %tr
         %td= link_to product.id, product_path(product)
         %td= product.title
         %td= product.description
-        %td= product.price
+        %td #{product.price} $  
+        %td= product.category.name
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-mini'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
 = link_to t('.new', :default => t("helpers.links.new")), new_product_path, :class => 'btn btn-primary'
+.dropdown
+  %button.btn.btn-default.dropdown-toggle{ "type" => "button", "id" => "dropdownMenu1", "data-toggle" => "dropdown"}
+    Catrgories
+  %ul.dropdown-menu{ "role" => "menu", "aria-labelledby" => "dropdownMenu1" }
+    -@categories.each do |c|
+      %li{ "role" => "presentation" }
+        %a{ "role" => "menuitem", "tabindex" => "-1", "href" => product_category_path(c.id), "id" => "Category", "action" => "set_category", "value" => "#{c.id}"}
+          = c.name
