--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -19,6 +19,7 @@
         %td #{product.price} $  
         %td= product.category.name
         %td
+          = button_to 'Add to cart', cart_items_path(product_id: product)
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-mini'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
 = link_to t('.new', :default => t("helpers.links.new")), new_product_path, :class => 'btn btn-primary'
