--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -15,3 +15,4 @@
     %td{ "colspan" => 2} Total
     %td.total-cell= number_to_currency(@cart.total_price)
 =button_to "Empty cart", @cart, method: :delete, class: "btn btn-danger", confirm: "are you sure?"
+=link_to "back", products_path, class: "btn"
