--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -6,13 +6,15 @@
     %th Product
     %th Amount
     %th Price
+    %th Action
   -@cart.cart_items.each do |item|
     %tr
       %td #{item.product.title}
       %td #{item.amount}  
       %td=number_to_currency(item.total_price)
+      %td=link_to "delete", cart_item_path(item), :method => :delete, :confirm => "are you sure?", class: "btn btn-mini btn-danger"
   %tr
-    %td{ "colspan" => 2} Total
-    %td.total-cell= number_to_currency(@cart.total_price)
+    %td.total-line{ "colspan" => 2} Total
+    %td.total-cell{ "colspan" => 2}= number_to_currency(@cart.total_price)
 =button_to "Empty cart", @cart, method: :delete, class: "btn btn-danger", confirm: "are you sure?"
 =link_to "back", products_path, class: "btn"
